Project

General

Profile

Actions

Bug #14264

closed

RDoc comment of warn does not mention uplevel:

Bug #14264: RDoc comment of warn does not mention uplevel:

Added by znz (Kazuhiro NISHIYAMA) over 8 years ago. Updated over 8 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:84574]

Description

Kernel#warn support uplevel keyword argument since 2.5.0, but rdoc does not mention it.

https://github.com/ruby/ruby/blob/691b05e83c41d089c4f6c7a8bbac9dd63f36a144/error.c#L309-L325


Files

Actions

Also available in: PDF Atom